[Threaded Compositor] SHOULD NEVER BE REACHED in WebKit::CompositingRunLoop::updateCompleted https://bugs.webkit.org/show_bug.cgi?id=171336

Reviewed by Michael Catanzaro.

We are assuming that all calls to ThreadedCompositor::renderLayerTree() happen because of an scheduled update,
but that's not true in the case of ThreadedCompositor::forceRepaint(). In that case we never want to call
CompositingRunLoop::updateCompleted().

* Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::forceRepaint):
(WebKit::ThreadedCompositor::sceneUpdateFinished):
* Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.h:

Canonical link: https://commits.webkit.org/188563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216182 268f45cc-cd09-0410-ab3c-d52691b4dbfc